--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
   </head>
   <body>
     <h1>welcome to my web page</h1>
-    
+    <img src="https://avatars.githubusercontent.com/u/94188583?v=4">
   </body>
 </html>
