--- a/index.html
+++ b/index.html
@@ -9,5 +9,8 @@
       <li>https://github.com</li>
       <li>https://www.linkedin.com</li>
     </ul>
+    <ul>
+      <li><a href="https://github.com">This is a link to GitHub!</a></li>
+    </ul>
   </body>
 </html>
