--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   </head>
   <body>
     <h1>welcome to my web pages</h1>
+    <h4>I am sruthi p a</h4><br>
+    <p>I am currently a student in JECC</p>
     <img src="https://avatars.githubusercontent.com/u/94188583?v=4">
     <ul>
       <li>https://github.com</li>
